--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,9 @@ dependencies {
         implementation "org.opensaml:opensaml-saml-api:4.1.1"
         implementation "org.opensaml:opensaml-saml-impl:4.1.1"
     }
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security:6.1.11'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web:6.1.11'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.security:spring-security-saml2-service-provider'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
